--- a/static/css/reset.css
+++ b/static/css/reset.css
@@ -123,7 +123,8 @@ table {
   border-spacing: 0;
 }
 
-@import url("//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css");
+/* @import url("//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css");
 * {
   font-family: "Spoqa Han Sans", "Spoqa Han Sans JP", "Sans-serif";
 }
+ */
