--- a/templates/com.html
+++ b/templates/com.html
@@ -7,23 +7,31 @@
 
     <link rel="stylesheet" type="text/css" href="../static/css/reset.css" />
     <link rel="stylesheet" type="text/css" href="../static/css/com.css" />
-
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
     <script src="../static/JS/com.js"></script>
     <title>세상의 모든 잡담</title>
-   
   </head>
   <body>
-    <div class="header">
-      <h1><a href="/"> 잡담모의</a></h1>
-      <nav>
-        <a href="/api/upload">
-          <button class="btn">잡담하기</button>
-        </a>
-      </nav>
-    </div>
+    <div id="wrap">
+      <div class="sidebar">
+        <div class="logo">
+          <h1><a href="/"> 잡담모의</a></h1>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="/api/upload"> 잡담하기 </a></li>
+          </ul>
+        </nav>
+        <button class="logout_btn" type="button" onclick="logout()">
+          로그아웃
+        </button>
+      </div>
 
-    <div class="card" id="card"></div>
+      <div class="card" id="card">
+        <ul class="card_inner"></ul>
+      </div>
+    </div>
   </body>
 </html>
