--- a/static/css/com.css
+++ b/static/css/com.css
@@ -1,23 +1,24 @@
-/* @import url("//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css");
-.spoka * {
-  font-family: "Spoqa Han Sans", "Spoqa Han Sans JP", "Sans-serif";
-} */
 :root {
   --text-color: #fff;
   --board-border-color: #323232;
   --board-content-color: #dadada;
 }
-
+/** Semi Bold */
 @font-face {
-  font-family: "San Francisco";
-  font-weight: 100;
-  src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-ultralight-webfont.woff");
+  font-family: "San Francisco 600";
+  font-weight: 600;
+  src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-semibold-webfont.woff");
+}
+/** Regular */
+@font-face {
+  font-family: "San Francisco 400";
+  font-weight: 400;
+  src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-regular-webfont.woff");
 }
 body {
   background: #171616;
 }
 * {
-  font-family: "San Francisco";
   color: var(--text-color);
 }
 #wrap {
@@ -55,7 +56,8 @@ body {
 .card > ul > li {
   list-style-type: none;
   display: inline-block;
-  height: 350px;
+  max-width: 350px;
+  height: 290px;
   border-radius: 4px;
   border: 1px solid var(--board-border-color);
 }
@@ -77,7 +79,7 @@ a {
 }
 .image img {
   width: 100%;
-  max-height: 210px;
+  height: 170px;
   object-fit: cover;
   cursor: pointer;
 }
@@ -122,20 +124,31 @@ nav ul li a {
   font-family: "Spoqa Han Sans", "Spoqa Han Sans JP", "Sans-serif";
 }
 .content_container {
-  height: calc(100% - 210px);
   display: flex;
   flex-direction: column;
-  padding: 20px;
+  padding: 20px 15px;
   box-sizing: border-box;
   align-items: flex-start;
   gap: 15px 0;
+  font-family: "San Francisco 600";
+  align-items: flex-start;
 }
 .content_container .description {
   color: var(--board-content-color);
   font-size: 13px;
 }
-.title h5 {
+.description {
+  word-break: break-word;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  font-family: "San Francisco 400";
+}
+.title {
   font-size: 14px;
+  text-align: left;
 }
 .logout_btn {
   position: absolute;
