--- a/static/css/detail.css
+++ b/static/css/detail.css
@@ -3,8 +3,8 @@
 }
 #wrap {
   background: #171616;
- height: 100vh;
-  overflow-y:scroll
+  height: 100vh;
+  overflow-y: scroll;
 }
 #wrap main {
   padding: 30px;
@@ -30,9 +30,7 @@
   flex-direction: column;
   border: 0.1px solid #606060;
   border-radius: 10px;
-    padding: 40px;
-
-
+  padding: 40px;
 }
 .img_label {
   display: flex;
@@ -61,7 +59,7 @@
 }
 #img_view {
   width: 100%;
-
+  aspect-ratio: 16/14;
   max-height: 500px;
   object-fit: cover;
 }
@@ -115,7 +113,7 @@
   font-size: 23px;
   margin: 30px 0;
   letter-spacing: 0.5px;
-      line-height: 28px;
+  line-height: 28px;
   color: white;
 }
 #img_view {
@@ -125,7 +123,7 @@
   padding: 15px;
   box-sizing: border-box;
   background: #171616;
-border: 0.1px solid #606060;
+  border: 0.1px solid #606060;
   border-radius: 5px;
   font-size: 14px;
   color: white;
