--- a/static/css/com.css
+++ b/static/css/com.css
@@ -56,8 +56,6 @@ body {
 .card > ul > li {
   list-style-type: none;
   display: inline-block;
-  max-width: 350px;
-  height: 290px;
   border-radius: 4px;
   border: 1px solid var(--board-border-color);
 }
@@ -79,7 +77,7 @@ a {
 }
 .image img {
   width: 100%;
-  height: 170px;
+  height: 220px;
   object-fit: cover;
   cursor: pointer;
 }
@@ -87,9 +85,9 @@ a {
 .card_inner {
   grid-template-columns: 1fr;
   display: grid;
-  width: 370px;
+  width: 100%;
   gap: 50px;
-  max-width: 450px;
+    max-width: 600px;
   padding: 50px;
   box-sizing: border-box;
 }
@@ -136,6 +134,7 @@ nav ul li a {
 .content_container .description {
   color: var(--board-content-color);
   font-size: 13px;
+  text-align:left;
 }
 .description {
   word-break: break-word;
