--- a/static/css/detail.css
+++ b/static/css/detail.css
@@ -5,7 +5,6 @@ body::-webkit-scrollbar {
   display: none;
 }
 #wrap {
-
 }
 #wrap main {
   padding: 30px;
@@ -15,7 +14,7 @@ body::-webkit-scrollbar {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height:100vh;
+  min-height: 100vh;
 }
 .logo {
   margin: 30px 20px;
@@ -112,6 +111,7 @@ body::-webkit-scrollbar {
   display: flex;
   justify-content: flex-end;
   cursor: pointer;
+  width: 100%;
 }
 .detail_title {
   font-weight: 500;
@@ -132,4 +132,34 @@ body::-webkit-scrollbar {
   font-size: 14px;
   color: white;
   word-break: break-all;
+}
+.comment_form {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  gap: 20px 0;
+}
+
+.comment_container .comment_title {
+  color: #fff;
+}
+
+.comment_title {
+  color: #fff;
+}
+.comment_container {
+  display: flex;
+
+  width: 100%;
+}
+.comment_container textarea {
+  width: 100%;
+  height: 120px;
+  resize: none;
+  outline: none;
+  padding: 10px;
+  box-sizing: border-box;
+}
+.comment_container button {
+  min-width: 80px;
 }
