--- a/templates/detail.html
+++ b/templates/detail.html
@@ -1,4 +1,5 @@
 <html lang="en">
+  `
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -7,10 +8,9 @@
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-<!--    <link rel="stylesheet" href="../static/css/upload.css/">-->
+    <!--    <link rel="stylesheet" href="../static/css/upload.css/">-->
     <link rel="stylesheet" href="../static/css/detail.css" />
     <link rel="stylesheet" href="../static/css/reset.css" />
-
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="../static//JS//detail.js"></script>
@@ -23,9 +23,12 @@
           <div class="logo">
             <h2>잡담모의</h2>
           </div>
-          <form id="upload_form" action=""></form>
+          <form id="upload_form" action="">
+           
+          </form>
         </div>
       </main>
     </div>
   </body>
 </html>
+`
