--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,9 +1,17 @@
-a{
+body {
+    background-image: url("../img/back.jpg");
+    background-repeat: no-repeat;
+    background-size: 100vw;
+    color: #3B3C36;
+}
+
+a {
     list-style: none;
     text-decoration: none;
     color: black;
 }
-a:hover{
+
+a:hover {
     color: black;
     cursor: pointer;
 }
@@ -11,7 +19,7 @@ a:hover{
 header > h2 {
     font-weight: 400;
     text-align: center;
-    margin: 40px auto 40px auto;
+    margin: 100px auto 40px auto;
     margin-bottom: -20px;
     font-size: 30px;
 }
@@ -29,69 +37,74 @@ header > h1 {
     margin: 20px auto 20px auto;
     padding: 20px;
 }
-.border_radius15{
+
+.border_radius15 {
     border-radius: 15px;
 }
-.border_radius20{
-    border-radius: 20px;
+
+.border_radius20 {
+    border-radius: 15px;
 }
-.border_radius30{
-    border-radius: 30px;
+
+.border_radius30 {
+    border-radius: 15px;
 }
 
 
-.signuptext{
+.signuptext {
     font-weight: 800;
 }
 
 button,
 button::after {
-  -webkit-transition: all 0.3s;
-	-moz-transition: all 0.3s;
-  -o-transition: all 0.3s;
-	transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
 }
 
 button {
-  background: none;
-  border: 3px solid #fff;
-  border-radius: 5px;
-  color: #fff;
-  display: block;
-  font-size: 1.6em;
-  font-weight: bold;
-  margin: 1em auto;
-  padding: 2em 6em;
-  position: relative;
-  text-transform: uppercase;
+    background: none;
+    border: 3px solid #fff;
+    border-radius: 5px;
+    color: #fff;
+    display: block;
+    font-size: 1.6em;
+    font-weight: bold;
+    margin: 1em auto;
+    padding: 1em 7em;
+    position: relative;
+    text-transform: uppercase;
 }
 
 button::before,
 button::after {
-  background: #fff;
-  content: '';
-  position: absolute;
-  z-index: -1;
+    content: '';
+    position: absolute;
+    z-index: -1;
 }
 
 button:hover {
-  color: #15e868;
+    color: rgba(131, 163, 176);
+    border: 3px solid rgba(131, 163, 176);
+    border-radius: 5px;
 }
+
 .btn-3::after {
-  height: 0;
-  left: 50%;
-  top: 50%;
-  width: 0;
+    height: 0;
+    left: 50%;
+    top: 50%;
+    width: 0;
 }
 
 .btn-3:hover:after {
-  height: 100%;
-  left: 0;
-  top: 0;
-  width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    width: 100%;
 }
 
-.signuptext_area{
+.signuptext_area {
 
     margin: 0 auto;
 }
