--- a/static/css/com.css
+++ b/static/css/com.css
@@ -1,7 +1,7 @@
 :root {
   --text-color: #fff;
-  --board-border-color: #323232;
-  --board-content-color: #dadada;
+  --board-border-color: #d8d9d7;
+  --board-content-color: #3b3c36;
 }
 /** Semi Bold */
 @font-face {
@@ -16,7 +16,7 @@
   src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-regular-webfont.woff");
 }
 body {
-  background: #171616;
+  background: rgb(228 226 214);
 }
 * {
   color: var(--text-color);
@@ -28,8 +28,8 @@ body {
 .sidebar {
   width: 240px;
   height: 100vh;
-  background-color: #0c0c0c;
-  border-right: 0.1px solid var(--board-border-color);
+  background: rgba(198, 211, 213);
+  border-right: 0.1px solid #fff;
   position: fixed;
   left: 0;
 }
@@ -56,7 +56,10 @@ body {
 .card > ul > li {
   list-style-type: none;
   display: inline-block;
-  border-radius: 4px;
+  border-radius: 7px;
+  background: #fdfdfd;
+  overflow: hidden;
+  box-shadow: 0 0 14px -2px rgb(0 0 0 / 30%);
   border: 1px solid var(--board-border-color);
 }
 
@@ -87,7 +90,7 @@ a {
   display: grid;
   width: 100%;
   gap: 50px;
-    max-width: 600px;
+  max-width: 600px;
   padding: 50px;
   box-sizing: border-box;
 }
@@ -102,6 +105,7 @@ a {
   font-size: 25px;
   font-weight: 500;
   letter-spacing: 2px;
+  color: #3b3c36;
 }
 nav ul {
   display: flex;
@@ -119,6 +123,7 @@ nav ul li {
   box-sizing: border-box;
 }
 nav ul li a {
+  color: #3b3c36;
   font-family: "Spoqa Han Sans", "Spoqa Han Sans JP", "Sans-serif";
 }
 .content_container {
@@ -134,12 +139,13 @@ nav ul li a {
 .content_container .description {
   color: var(--board-content-color);
   font-size: 13px;
-  text-align:left;
+  text-align: left;
 }
 .description {
   word-break: break-word;
   overflow: hidden;
   text-overflow: ellipsis;
+  color: #3b3c36;
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
@@ -147,7 +153,9 @@ nav ul li a {
 }
 .title {
   font-size: 14px;
+  font-weight: 500;
   text-align: left;
+  color: #3b3c36;
 }
 .logout_btn {
   position: absolute;
@@ -155,10 +163,13 @@ nav ul li a {
   left: 50%;
   transform: translateX(-50%);
   background: none;
-  border: 1px solid #6c6666;
+
   padding: 8px 15px;
   width: 80px;
+  color: #fff;
+  border: none;
   letter-spacing: 0.5px;
+  font-weight: 500;
   border-radius: 5px;
   cursor: pointer;
   font-size: 11px;
