--- a/static/css/detail.css
+++ b/static/css/detail.css
@@ -8,7 +8,7 @@ body::-webkit-scrollbar {
 }
 #wrap main {
   padding: 30px;
-  background: #0c0c0c;
+  background: rgb(215, 216, 218);
   box-sizing: border-box;
   position: relative;
   display: flex;
@@ -22,17 +22,18 @@ body::-webkit-scrollbar {
 }
 .logo h2 {
   font-size: 2rem;
+  color: #3b3c36;
   font-weight: 700;
 }
 
 .upload_container {
-  background: #171616;
+  background: rgb(192, 204, 206);
   width: fit-content;
   display: flex;
   align-items: center;
   justify-content: flex-start;
   flex-direction: column;
-  border: 0.1px solid #606060;
+  box-shadow: 0 0 12px 2px rgb(0 0 0 / 12%);
   border-radius: 10px;
   padding: 40px;
 }
@@ -119,18 +120,18 @@ body::-webkit-scrollbar {
   margin: 30px 0;
   letter-spacing: 0.5px;
   line-height: 28px;
-  color: white;
+  color: #3b3c36;
 }
 
 #text_board {
   min-height: 200px;
   padding: 15px;
   box-sizing: border-box;
-  background: #171616;
-  border: 0.1px solid #606060;
+  background: #c0c6ca;
+
   border-radius: 5px;
   font-size: 14px;
-  color: white;
+  color: #3b3c36;
   word-break: break-all;
 }
 .comment_form {
@@ -141,11 +142,11 @@ body::-webkit-scrollbar {
 }
 
 .comment_container .comment_title {
-  color: #fff;
+  color: #3b3c36;
 }
 
 .comment_title {
-  color: #fff;
+  color: #3b3c36;
 }
 .comment_container {
   display: flex;
@@ -158,10 +159,14 @@ body::-webkit-scrollbar {
   resize: none;
   outline: none;
   padding: 10px;
+  border: none;
   box-sizing: border-box;
+  background: #eeeeee;
 }
 .comment_container button {
   min-width: 80px;
+  border: none;
+  background: #dbdbdb;
 }
 #commentList_container {
   width: 100%;
@@ -170,9 +175,9 @@ body::-webkit-scrollbar {
   display: flex;
   flex-direction: column;
   gap: 10px 0;
-  color: #fff;
+  color: #3b3c36;
   padding: 11px;
-  background: #2b2a2a;
+  background: #c0c6ca;
   border-radius: 5px;
 }
 
